--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,20 +1,20 @@
 @font-face{
     font-family: "Lovelace";
-    font-weight: 400;
+    font-weight: 500;
     font-style: normal;
     src: 
-        url("../fonts/Lovelace-Text-Medium-trial.woff2") format("woff2"),
-        url("../fonts/Lovelace-Text-Medium-trial.woff") format("woff");
+        url("../fonts/Lovelace-Medium.woff2") format("woff2"),
+        url("../fonts/Lovelace-Medium.woff") format("woff");
     font-display: swap;
 }
 
 @font-face{
     font-family: "Lovelace";
-    font-weight: 500;
+    font-weight: 400;
     font-style: normal;
     src: 
-        url("../fonts/Lovelace-Text-Bold-trial.woff2") format("woff2"),
-        url("../fonts/Lovelace-Text-Bold-trial.woff") format("woff");
+        url("../fonts/Lovelace-Regular.woff2") format("woff2"),
+        url("../fonts/Lovelace-Regular.woff") format("woff");
     font-display: swap;
 }
 
@@ -23,8 +23,8 @@
     font-weight: 200;
     font-style: normal;
     src: 
-        url("../fonts/Lovelace-Text-Light-trial.woff2") format("woff2"),
-        url("../fonts/Lovelace-Text-Light-trial.woff") format("woff");
+        url("../fonts/Lovelace-Light.woff2") format("woff2"),
+        url("../fonts/Lovelace-Light.woff") format("woff");
     font-display: swap;
 }
 
@@ -33,7 +33,7 @@
     font-weight: 700;
     font-style: normal;
     src: 
-        url("../fonts/Lovelace-Text-Extrabold-trial.woff2") format("woff2"),
-        url("../fonts/Lovelace-Text-Extrabold-trial.woff") format("woff");
+        url("../fonts/Lovelace-Bold.woff2") format("woff2"),
+        url("../fonts/Lovelace-Bold.woff") format("woff");
     font-display: swap;
 }
