--- a/css/media.css
+++ b/css/media.css
@@ -466,6 +466,58 @@
     }
 }
 
+@media(max-width:480px){
+    .container{
+        width: 430px;
+    }
+
+    .footer-position-mobile {
+        margin-right: 240px;
+    }
+
+    .logo {
+        width: 96px;
+        height: 34px;
+        margin-right: -150px;
+    }
+
+    .info-header{
+        padding-top: 15px;
+        padding-bottom: 0px;
+    }
+
+    .contact-adress {
+        padding-top: 70px;
+        width: 350px;
+        padding-left: 0px;
+        margin-bottom: 40px;
+    }
+
+    .footer-inst-logo img {
+        width: 60px;
+        position: relative;
+        left: 380px;
+        top: 0px;
+    }
+
+    .footer-inst-logo {
+        margin-right: 0px;
+        position: absolute;
+        top: 1980px;
+    }
+
+    .contact-callback {
+        padding-left: 40px;
+        padding-right: 40px;
+        margin-left: 0;
+        width: 430px;
+    }
+
+    .list-copyrait {
+        display: block;
+    }
+}
+
 
 @media(max-width:320px){
 
