--- a/css/media.css
+++ b/css/media.css
@@ -466,7 +466,7 @@
     }
 }
 
-@media (min-width:320px) and (max-width:480px){
+@media(max-width:480px){
     .container{
         width: 430px;
     }
@@ -586,11 +586,11 @@
 }
 
 
-/* @media(max-width:320px){
+@media(max-width:320px){
 
     /* Шапка */
 
-    /* .container{
+    .container{
         width: 290px;
     }
 
@@ -1089,4 +1089,4 @@
     .padding-main-top{
         padding-top: 85px;
     }
-}  */
+} 
